--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -15,27 +15,6 @@ $sizes: (1320:$xxl,
 );
 
 
-@each $container-size,
-$break-point in $sizes {
-    @if $container-size==0 {
-        .container {
-            width: 100%;
-            margin-right: auto;
-            margin-left: auto;
-            padding-right: 15px;
-            padding-left: 15px;
-        }
-    }
-
-    @else {
-        @media(min-width:#{$break-point}px) {
-            .container {
-                max-width: #{$container-size}px;
-            }
-        }
-    }
-}
-
 @mixin media($size) {
     @media (max-width:#{$size}px) {
         @content;
@@ -60,4 +39,14 @@ $break-point in $sizes {
         top: $top;
         left: $left;
     }
+}
+
+$baseValueLarge: 1440px;
+$baseValueSmall: 428px;
+
+@mixin res($property, $value) {
+    #{$property}: calc(($value / $baseValueLarge) * 100vw);
+}
+@mixin resa ($property, $value) {
+    #{$property}: calc(($value / $baseValueSmall) * 100vw);
 }
