--- a/src/scss/themes/_theme.scss
+++ b/src/scss/themes/_theme.scss
@@ -4,7 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     -webkit-tap-highlight-color: transparent;
-    font-family: 'Montserrat', sans-serif;
+    font-family: PTSans, sans-serif;
     &:focus,
     &:active{
         outline: none;
@@ -13,6 +13,11 @@
 html,
 body{
     height: 100%;
+}
+body{
+    &.hidden{
+        overflow-y: hidden;
+    }
 }
 .wrapper{
     min-height: 100%;
@@ -29,19 +34,17 @@ button{
 }
 a{
     color: inherit;
+    text-decoration: none;
 }
 ul{
     list-style-type: none;
 }
-// delete this code
-body{
-    background: #000;
-    color: #fff;
-    @include media(992){
-        background: rgb(34, 34, 34);
-    }
-    main{
-        padding: 20px 0;
-        z-index: z(header);
+.container{
+    @include res('max-width', 984px);
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    @include media(576){
+        @include resa('max-width', 398px);
     }
 }
