--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -1,4 +1,127 @@
 mixin header()
     header.header 
-        .header__nav.container 
-            p header
+        .header__nav.container
+            a(href="index.html").logo
+                img(src="@img/logo.svg", alt="" draggable="false")
+            .menu 
+                .menu-btn
+            .header__right 
+                .header__wrapper
+                    .header__top
+                        .header__top-left 
+                            .header__dropdown 
+                                button(type="button").header__dropdown-button Выбор региона
+                                    img(src="@img/arrow-down.svg", alt="" draggable="false").header__arrow
+                                ul.header__dropdown-content 
+                                    li.header__dropdown-li Белгородская
+                                    li.header__dropdown-li Белгородская
+                                    li.header__dropdown-li Белгородская
+                                    li.header__dropdown-li Белгородская
+                                    li.header__dropdown-li Белгородская
+                            .header__dropdown 
+                                button(type="button").header__dropdown-button 
+                                    img(src="@img/phone.svg", alt="" draggable="false").header__img
+                                    | 8 (800) 000-00-00
+                                    img(src="@img/arrow-down.svg", alt="" draggable="false").header__arrow
+                                ul.header__dropdown-content 
+                                    li.header__dropdown-li 
+                                        a(href="#!").header__dropdown-link +7 (495) 64-614-64
+                                    li.header__dropdown-li 
+                                        a(href="#!").header__dropdown-link +7 (966) 119-57-08
+                            a(href="https://whatsapp.com").header__a 
+                                img(src="@img/whatsapp.svg", alt="" draggable="false") 
+                            .header__dropdown 
+                                button(type="button").header__dropdown-button 
+                                    img(src="@img/telegram.svg", alt="" draggable="false").header__img
+                                    | Контакты
+                                    img(src="@img/arrow-down.svg", alt="" draggable="false").header__arrow
+                                ul.header__dropdown-content 
+                                    li.header__dropdown-li 
+                                        a(href="#!").header__dropdown-link Контакты
+                                    li.header__dropdown-li 
+                                        a(href="#!").header__dropdown-link Контакты
+                        form(action="").header__form
+                            input(type="text" placeholder="Поиск").header__input
+                            button(type="submit").header__search
+                                img(src="@img/search.svg", alt="" draggable="false")
+                    .header__bottom
+                            .header__dropdown 
+                                button(type="button").header__dropdown-button Каталог проектов
+                                    img(src="@img/arrow-down.svg", alt="" draggable="false").header__arrow
+                                ul.header__dropdown-content 
+                                    li.header__dropdown-li Каталог проектов
+                                    li.header__dropdown-li Каталог проектов
+                                    li.header__dropdown-li Каталог проектов
+                                    li.header__dropdown-li Каталог проектов
+                                    li.header__dropdown-li Каталог проектов
+                            .header__dropdown 
+                                button(type="button").header__dropdown-button Каталог материалов
+                                    img(src="@img/arrow-down.svg", alt="" draggable="false").header__arrow
+                                ul.header__dropdown-content 
+                                    li.header__dropdown-li Каталог материалов
+                                    li.header__dropdown-li Каталог материалов
+                                    li.header__dropdown-li Каталог материалов
+                                    li.header__dropdown-li Каталог материалов
+                                    li.header__dropdown-li Каталог материалов
+                            .header__dropdown 
+                                button(type="button").header__dropdown-button Строительство
+                                    img(src="@img/arrow-down.svg", alt="" draggable="false").header__arrow
+                                ul.header__dropdown-content 
+                                    li.header__dropdown-li Строительство
+                                    li.header__dropdown-li Строительство
+                                    li.header__dropdown-li Строительство
+                                    li.header__dropdown-li Строительство
+                                    li.header__dropdown-li Строительство
+                            .header__dropdown 
+                                button(type="button").header__dropdown-button Услуги и цены
+                                    img(src="@img/arrow-down.svg", alt="" draggable="false").header__arrow
+                                ul.header__dropdown-content 
+                                    li.header__dropdown-li Консультация и расчет материалов
+                                    li.header__dropdown-li Индивидуальное проектирование
+                                    li.header__dropdown-li Расчет сметы на строительство
+                                    li.header__dropdown-li Строительство фундаментов
+                                    li.header__dropdown-li Шеф-монтаж выполненных работ
+                                    li.header__dropdown-li 3D моделирование
+                                    li.header__dropdown-li Проектирование и монтаж инженерных сетей
+                                    li.header__dropdown-li Проектирование и монтаж системы умного дома
+                            .header__dropdown 
+                                button(type="button").header__dropdown-button Информация
+                                    img(src="@img/arrow-down.svg", alt="" draggable="false").header__arrow
+                                ul.header__dropdown-content 
+                                    li.header__dropdown-li Информация
+                                    li.header__dropdown-li Информация
+                                    li.header__dropdown-li Информация
+                                    li.header__dropdown-li Информация
+                                    li.header__dropdown-li Информация
+                                    li.header__dropdown-li Информация
+                                    li.header__dropdown-li Информация
+                                    li.header__dropdown-li Информация
+                .header__top-right
+                    .container 
+                        ul.header__list 
+                            li.header__li 
+                                a(href="#!").header__phone 8 (800) 000-00-00
+                            li.header__li  
+                                a(href="#!").header__phone +7 (495) 64-614-64
+                            li.header__li 
+                                a(href="#!").header__phone +7 (966) 119-57-08
+                        .header__medias 
+                            a(href="https://whatsapp.com").header__media   
+                                <svg width="35" height="35" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M35 17.5C35 27.167 27.167 35 17.5 35C7.833 35 0 27.167 0 17.5C0 7.833 7.833 0 17.5 0C27.167 0 35 7.833 35 17.5Z" fill="#FFFAF4"/>
+                                    <path d="M27.8601 16.2261C27.7201 10.7661 23.2261 6.38408 17.6891 6.38408C12.2221 6.38408 7.75617 10.6681 7.52517 16.0371C7.51817 16.1841 7.51116 16.3311 7.51116 16.4851C7.51116 18.3891 8.04313 20.1741 8.97413 21.7001L7.14014 27.1181L12.7752 25.3261C14.2312 26.1241 15.9111 26.5791 17.6961 26.5791C23.3171 26.5791 27.8741 22.0571 27.8741 16.4851C27.8671 16.4011 27.8601 16.3171 27.8601 16.2261ZM17.6891 24.9761C15.9531 24.9761 14.3361 24.4581 12.9851 23.5691L9.69515 24.6121L10.7662 21.4621C9.74417 20.0621 9.13512 18.3401 9.13512 16.4851C9.13512 16.2051 9.14916 15.9321 9.17716 15.6591C9.59716 11.3611 13.2511 7.99408 17.6891 7.99408C22.1831 7.99408 25.8721 11.4521 26.2151 15.8201C26.2291 16.0371 26.2432 16.2611 26.2432 16.4851C26.2432 21.1681 22.4071 24.9761 17.6891 24.9761Z" fill="#2C2C2C"/>
+                                    <path d="M22.3511 18.5222C22.0991 18.3962 20.8741 17.8012 20.6431 17.7172C20.4121 17.6332 20.2511 17.5912 20.0831 17.8432C19.9151 18.0882 19.4391 18.6482 19.2921 18.8162C19.1451 18.9842 18.9981 19.0052 18.7531 18.8792C18.5011 18.7532 17.7031 18.4942 16.7441 17.6472C16.0021 16.9892 15.4981 16.1842 15.3581 15.9322C15.2111 15.6872 15.3441 15.5542 15.4701 15.4282C15.5821 15.3162 15.7221 15.1412 15.8411 14.9942C15.8761 14.9522 15.9041 14.9102 15.9321 14.8752C15.9951 14.7842 16.0301 14.7002 16.0931 14.5812C16.1771 14.4132 16.1351 14.2732 16.0721 14.1472C16.0091 14.0212 15.5121 12.8032 15.3021 12.3062C15.0921 11.8092 14.8891 11.8932 14.7421 11.8932C14.5951 11.8932 14.4341 11.8722 14.2661 11.8722C14.0981 11.8722 13.8321 11.9352 13.6011 12.1802C13.3701 12.4252 12.7261 13.0272 12.7261 14.2452C12.7261 14.5322 12.7751 14.8192 12.8521 15.0852C13.1041 15.9602 13.6431 16.6742 13.7411 16.8002C13.8671 16.9612 15.4701 19.5442 18.0041 20.5382C20.5381 21.5322 20.5381 21.1962 21.0001 21.1542C21.4551 21.1122 22.4771 20.5592 22.6871 19.9782C22.8971 19.3972 22.8971 18.9072 22.8341 18.8022C22.7641 18.7042 22.5961 18.6482 22.3511 18.5222Z" fill="#2C2C2C"/>
+                                </svg>
+                            a(href="https://whatsapp.com").header__media  
+                                <svg width="35" height="35" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M35 17.5C35 27.167 27.167 35 17.5 35C7.833 35 0 27.167 0 17.5C0 7.833 7.833 0 17.5 0C27.167 0 35 7.833 35 17.5Z" fill="#FFFAF4"/>
+                                    <path d="M18.1368 8.02894C23.3028 8.80594 25.6828 11.2139 26.3408 16.3169C26.3478 16.3519 26.3478 16.3939 26.3478 16.4359C26.3758 16.8979 26.2708 17.4999 26.9078 17.5139C27.4538 17.5209 27.4818 17.1219 27.4678 16.7159C27.4608 16.5899 27.4538 16.4709 27.4538 16.3589C27.5168 11.5569 23.2398 7.10494 18.2838 6.93694C17.9128 6.99294 17.1358 6.68494 17.0868 7.50394C17.0518 8.04994 17.7028 7.95894 18.1368 8.02894Z" fill="#2C2C2C"/>
+                                    <path d="M19.1447 9.42196C18.6477 9.36596 17.9897 9.13498 17.8777 9.80698C17.7587 10.514 18.4866 10.444 18.9556 10.549C22.1476 11.249 23.2607 12.383 23.7787 15.491C23.7997 15.624 23.8067 15.778 23.8137 15.925C23.8417 16.289 23.9257 16.618 24.4857 16.534C24.7727 16.492 24.8637 16.324 24.8917 16.121C24.9197 15.911 24.8776 15.673 24.9056 15.491C24.9336 12.509 22.3297 9.79996 19.1447 9.42196Z" fill="#2C2C2C"/>
+                                    <path d="M19.4387 11.858C19.1097 11.865 18.7807 11.9 18.6617 12.25C18.4797 12.768 18.8647 12.894 19.2567 12.957C20.5657 13.16 21.2517 13.916 21.3847 15.197C21.3987 15.358 21.4617 15.505 21.5527 15.617C21.6577 15.736 21.8047 15.806 21.9867 15.785C22.0987 15.771 22.1827 15.736 22.2457 15.694C22.4767 15.54 22.4977 15.225 22.4907 14.924C22.5047 13.489 20.8527 11.823 19.4387 11.858Z" fill="#2C2C2C"/>
+                                    <path d="M26.0539 21.9169C25.4099 21.4059 24.7169 20.9509 24.0379 20.4819C22.6869 19.5509 21.4479 19.4809 20.4399 20.9789C19.8729 21.8189 19.0819 21.8539 18.2489 21.4899C15.9599 20.4749 14.1959 18.9069 13.1599 16.6249C12.9989 16.2679 12.8939 15.9249 12.8799 15.5959C12.8449 15.0009 13.0899 14.4619 13.7829 13.9999C14.3499 13.6219 14.9239 13.1739 14.8749 12.3549C14.8189 11.2769 12.1519 7.68588 11.1019 7.30788C10.6679 7.15388 10.2339 7.16088 9.79289 7.30788C7.32889 8.11988 6.30692 10.1079 7.28692 12.4599C7.83292 13.7689 8.44893 15.0009 9.14193 16.1559C12.1799 21.2309 16.6459 24.9199 22.3999 27.3489C22.8059 27.5169 23.2539 27.5869 23.4779 27.6499C25.0879 27.6639 26.9709 26.1449 27.5169 24.6399C28.0419 23.1839 26.9289 22.6099 26.0539 21.9169Z" fill="#2C2C2C"/>
+                                </svg>
+                            a(href="https://whatsapp.com").header__media 
+                                <svg width="35" height="35" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M17.5 35C27.165 35 35 27.165 35 17.5C35 7.83502 27.165 0 17.5 0C7.83502 0 0 7.83502 0 17.5C0 27.165 7.83502 35 17.5 35Z" fill="#FFFAF4"/>
+                                    <path d="M26.0189 10.388C25.9489 10.192 25.8719 10.136 25.7459 10.094C25.4729 9.98902 25.0109 10.143 25.0109 10.143C25.0109 10.143 8.65191 16.023 7.72091 16.674C7.51791 16.814 7.45492 16.898 7.41992 16.989C7.25892 17.451 7.76291 17.654 7.76291 17.654L11.9769 19.026C11.9769 19.026 12.1309 19.047 12.1869 19.012C13.1459 18.403 21.8329 12.922 22.3369 12.733C22.4139 12.712 22.4769 12.733 22.4559 12.789C22.2529 13.496 14.7069 20.202 14.7069 20.202C14.7069 20.202 14.6789 20.237 14.6579 20.279L14.6509 20.272L14.2589 24.451C14.2589 24.451 14.0909 25.732 15.3719 24.451C16.2749 23.548 17.1499 22.792 17.5909 22.421C19.0399 23.422 20.6009 24.528 21.2729 25.109C21.6089 25.403 21.8959 25.445 22.1269 25.438C22.7639 25.417 22.9459 24.71 22.9459 24.71C22.9459 24.71 25.9279 12.712 26.0259 11.109C26.0329 10.955 26.0469 10.85 26.0469 10.745C26.0609 10.612 26.0469 10.458 26.0189 10.388Z" fill="#2C2C2C"/>
+                                </svg>
