--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,1 +1,387 @@
-// Шапка
+.header{
+    @include res('padding-top', 6px);
+    position: relative;
+    isolation: isolate;
+    @include media(575){
+        background: #F5F5F5;
+        @include resa('padding-top', 26px);
+        @include resa('padding-bottom', 26px);
+    }
+    &::before{
+        content: '';
+        position: absolute;
+        height: 50%;
+        width: 100%;
+        top: 0;
+        background: #F5F5F5;
+        z-index: -1;
+        @include media(575){
+            display: none;
+        }
+    }
+    &__nav{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .logo{
+        @include res('width', 167px);
+        @include res('margin-right', 22px);
+        position: relative;
+        z-index: 2;
+        @include media(575){
+            @include resa('width', 167px);
+            margin-right: 0;
+        }
+        img{
+            width: 100%;
+        }
+    }
+    .menu{
+        display: none;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        @include resa('width', 31px);
+        @include resa('height', 26px);
+        z-index: 2;
+        @include media(575){
+            display: flex;
+        }
+        &.active{
+            .menu-btn{
+                display: none;
+            }
+            &::before{
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%) rotate(45deg);
+            }
+            &::after{
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%) rotate(-45deg);
+            }
+        }
+        &-btn{
+            width: 100%;
+            @include resa('height', 6px);
+            background: #D02128;
+        }
+        &::before{
+            content: '';
+            position: absolute;
+            top: 0;
+            width: 100%;
+            @include resa('height', 6px);
+            background: #D02128;
+            transition: 300ms ease;
+        }
+        &::after{
+            content: '';
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            @include resa('height', 6px);
+            background: #D02128;
+            transition: 300ms ease;
+        }
+    }
+    &__right{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        @include media(575){
+            position: fixed;
+            top: 0;
+            width: 100%;
+            height: 100vh;
+            flex-direction: column;
+            align-items: flex-start;
+            background: #FFF;
+            z-index: 1;
+            @include resa('padding-top', 106px);
+            left: 0;
+            justify-content: space-between;
+            opacity: 0;
+            visibility: hidden;
+            transition: 300ms ease;
+        }
+        &.active{
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+    &__wrapper{
+        @include media(575){
+            @include resa('max-width', 398px);
+            width: 100%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+    &__top{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        @include res('margin-bottom', 7px);
+        @include media(575){
+            flex-direction: column;
+            align-items: flex-start;
+        }
+        &-left{
+            display: flex;
+            align-items: center;
+            @include media(575){
+                display: none;
+            }
+        }
+        &-right{
+            background: #2A2D32;
+            @include resa('padding-top', 48px);
+            @include resa('padding-bottom', 27px);
+            width: 100%;
+            display: none;
+            @include media(575){
+                display: block;
+            }
+        }
+    }
+    &__list{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        @include resa('margin-bottom', 52px);
+    }
+    &__li{
+        &:not(:last-of-type){
+            @include resa('margin-bottom', 25px);
+            @include media(575){
+                margin-right: 0;
+            }
+        }
+    }
+    &__phone{
+        color: #FFF;
+        @include resa('font-size', 20px);
+        @include resa('letter-spacing', -0.2px);
+        line-height: 120%;
+        font-style: normal;
+        font-weight: 400;
+    }
+    &__medias{
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+    }
+    &__media{
+        @include resa('width', 35px);
+        &:not(:last-of-type){
+            @include resa('margin-right', 22px);
+        }
+        img{
+            width: 100%;
+        }
+    }
+    &__bottom{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        @include res('padding-bottom', 12px);
+        @include res('padding-top', 5px);
+        @include media(575){
+            @include resa('max-width', 398px);
+            width: 100%;
+            margin-left: auto;
+            margin-right: auto;
+            flex-direction: column;
+            align-items: stretch;
+            @include resa('margin-bottom', 46px);
+        }
+    }
+    &__dropdown{
+        position: relative;
+        &.active{
+            .header__arrow{
+                transform: rotate(-180deg);
+            }
+        }
+        &:first-of-type{
+            @include res('margin-right', 16px);
+            @include media(575){
+                margin-right: 0;
+            }
+        }
+        &:not(:last-of-type){
+            @include res('margin-right', 10px);
+            @include media(575){
+                margin-right: 0;
+                @include resa('margin-bottom', 13px);
+            }
+        }
+        &-button{
+            display: flex;
+            align-items: center;
+            color: #000;
+            @include res('font-size', 14px);
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            @include res('letter-spacing', -0.14px);
+            @include media(575){
+                @include resa('font-size', 20px);
+                text-align: left;
+                justify-content: space-between;
+                @include resa('max-width', 220px);
+                width: 100%;
+            }
+            .header__arrow{
+                @include res('margin-left', 2px);
+                transition: 300ms ease;
+                @include res('width', 9px);
+                @include media(575){
+                    @include resa('width', 15px);
+                    @include resa('margin-left', 5px);
+                }
+            }
+            .header__img{
+                @include res('width', 18px);
+                @include res('height', 18px);
+                @include res('margin-right', 5px);
+            }
+        }
+        &-content{
+            position: absolute;
+            right: 0;
+            top: 100%;
+            @include res('bottom', -2px);
+            @include res('border-radius', 8px);
+            border: solid #D02128;
+            @include res('border-width', 1px);
+            background: #F3F3F3;
+            @include res('max-width', 200px);
+            width: max-content;
+            height: max-content;
+            z-index: 1;
+            opacity: 0;
+            visibility: hidden;
+            transition: 300ms ease;
+            @include media(575){
+                max-width: 100%;
+                left: 0;
+                @include resa('border-radius', 8px);
+                @include resa('border-width', 1px);
+            }
+            &.active{
+                opacity: 1;
+                visibility: visible;
+            }
+        }
+        &-li{
+            cursor: pointer;
+            width: 100%;
+            color: #000;
+            @include res('font-size', 12px);
+            @include res('letter-spacing', -0.12px);
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            @include res('padding-top', 7px);
+            @include res('padding-bottom', 5px);
+            @include res('padding-left', 12px);
+            @include res('padding-right', 12px);
+            transition: 300ms ease;
+            @include media(575){
+                @include resa('font-size', 20px);
+                @include resa('padding-top', 7px);
+                @include resa('padding-bottom', 5px);
+                @include resa('padding-left', 12px);
+                @include resa('padding-right', 12px);
+            }
+            &:first-of-type{
+                border-radius: 0.556vw 0.556vw 0 0;
+                @include media(575){
+                    border-radius: 1.869vw 1.869vw 0 0;
+                }
+            }
+            &:last-of-type{
+                border-radius: 0 0 0.556vw 0.556vw;
+                @include media(575){
+                    border-radius: 0 0 1.869vw 1.869vw;
+                }
+            }
+            &:hover{
+                background: #dddddd
+            }
+        }
+    }
+    &__a{
+        @include res('width', 18px);
+        @include res('height', 18px);
+        @include res('margin-right', 10px);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        img{
+            width: 100%;
+        }
+    }
+    &__form{
+        display: flex;
+        align-items: center;
+        @include res('border-radius', 12px);
+        border: solid #D02128;
+        @include res('border-width', 1px);
+        @include res('height', 23px);
+        @include res('padding-right', 13px);
+        @include res('padding-top', 4px);
+        @include res('padding-bottom', 2px);
+        @include media(575){
+            @include resa('max-width', 213px);
+            width: 100%;
+            @include resa('height', 39px);
+            @include resa('border-radius', 20px);
+            @include resa('padding-right', 22px);
+            padding-top: 0;
+            @include resa('margin-bottom', 37px);
+        }
+    }
+    &__input{
+        border: none;
+        background: none;
+        height: 100%;
+        width: 100%;
+        @include res('padding-right', 10px);
+        @include res('padding-left', 10px);
+        @include res('font-size', 12px);
+        @include res('letter-spacing', -0.12px);
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        @include media(575){
+            @include resa('padding-left', 15px);
+            @include resa('padding-right', 15px);
+            @include resa('font-size', 20px);
+        }
+        &::placeholder{
+            color: #757575;
+        }
+    }
+    &__search{
+        @include res('min-width', 16px);
+        @include res('width', 16px);
+        @include res('height', 16px);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        @include media(575){
+            @include resa('min-width', 28px);
+            @include resa('width', 28px);
+            @include resa('height', 28px);
+        }
+        img{
+            width: 100%;
+        }
+    }
+}
