--- a/src/index.pug
+++ b/src/index.pug
@@ -10,6 +10,9 @@ html(lang="en")
         .wrapper 
             include components/header 
             +header
+            .main
+                include components/contacts 
+                +contacts
             include components/footer 
             +footer
         script(src="js/app.min.js") 
