--- a/src/components/news.pug
+++ b/src/components/news.pug
@@ -12,22 +12,28 @@ mixin news()
                     .news__top-wrapper 
                         .news__item 
                             p.news__date 17 июн
-                            p.news__desc Компания «ПРАВИЛО» - многофункциональный центр малоэтажного домостроения. На сайте которого Вы найдете не только проекты домов ...
+                            p.news__desc.disable-sm Компания «ПРАВИЛО» - многофункциональный центр малоэтажного домостроения. На сайте которого Вы найдете не только проекты домов ...
+                            p.news__desc.enable-sm Компания «ПРАВИЛО» - многофункциональный центр малоэтажного домостроения. 
                         .news__item 
                             p.news__date 17 июн
-                            p.news__desc Компания «ПРАВИЛО» - многофункциональный центр малоэтажного домостроения. На сайте которого Вы найдете не только проекты домов ...
+                            p.news__desc.disable-sm Компания «ПРАВИЛО» - многофункциональный центр малоэтажного домостроения. На сайте которого Вы найдете не только проекты домов ...
+                            p.news__desc.enable-sm Компания «ПРАВИЛО» - многофункциональный центр малоэтажного домостроения. 
                         .news__item 
                             p.news__date 17 июн
-                            p.news__desc Компания «ПРАВИЛО» - многофункциональный центр малоэтажного домостроения. На сайте которого Вы найдете не только проекты домов ...
+                            p.news__desc.disable-sm Компания «ПРАВИЛО» - многофункциональный центр малоэтажного домостроения. На сайте которого Вы найдете не только проекты домов ...
+                            p.news__desc.enable-sm Компания «ПРАВИЛО» - многофункциональный центр малоэтажного домостроения. 
                         .news__item 
                             p.news__date 17 июн
-                            p.news__desc Компания «ПРАВИЛО» - многофункциональный центр малоэтажного домостроения. На сайте которого Вы найдете не только проекты домов ...
+                            p.news__desc.disable-sm Компания «ПРАВИЛО» - многофункциональный центр малоэтажного домостроения. На сайте которого Вы найдете не только проекты домов ...
+                            p.news__desc.enable-sm Компания «ПРАВИЛО» - многофункциональный центр малоэтажного домостроения. 
                         .news__item 
                             p.news__date 17 июн
-                            p.news__desc Компания «ПРАВИЛО» - многофункциональный центр малоэтажного домостроения. На сайте которого Вы найдете не только проекты домов ...
+                            p.news__desc.disable-sm Компания «ПРАВИЛО» - многофункциональный центр малоэтажного домостроения. На сайте которого Вы найдете не только проекты домов ...
+                            p.news__desc.enable-sm Компания «ПРАВИЛО» - многофункциональный центр малоэтажного домостроения. 
                         .news__item 
                             p.news__date 17 июн
-                            p.news__desc Компания «ПРАВИЛО» - многофункциональный центр малоэтажного домостроения. На сайте которого Вы найдете не только проекты домов ...
+                            p.news__desc.disable-sm Компания «ПРАВИЛО» - многофункциональный центр малоэтажного домостроения. На сайте которого Вы найдете не только проекты домов ...
+                            p.news__desc.enable-sm Компания «ПРАВИЛО» - многофункциональный центр малоэтажного домостроения. 
                     a(href="#!").news__link Смотреть все
         .news__bottom 
             .news__bottom-body.container 
@@ -47,6 +53,7 @@ mixin news()
                             img(src="@img/news-img-1.png", alt="" draggable="false")
                     a(href="#!").news__a Смотреть все
                 .news__bottom-right 
+                    p.news__bottom-title Вопросы ответы
                     .news__row
                         .news__info 
                             p.news__bottom-subtitle Заголовок
