--- a/src/index.pug
+++ b/src/index.pug
@@ -11,6 +11,8 @@ html(lang="en")
             include components/header 
             +header
             .main
+                include components/services 
+                +services
                 include components/news 
                 +news
                 include components/contacts 
