--- a/src/components/advantages.pug
+++ b/src/components/advantages.pug
@@ -1,2 +1,27 @@
 mixin advantages()
-    
+    .advantages 
+        .advantages__body.container 
+            .advantages__content 
+                p.advantages__desc Компания «ПРАВИЛО» - многофункциональный центр малоэтажного домостроения. На сайте которого Вы найдете не только проекты домов, но и сможете заказать строительство понравившегося проекта. Услуга по строительству осуществляется в Москве, Подмосковье и областях Краснодарского края и Центральной России. Мы выполняем полный цикл строительства, начиная с проектирования и заканчивая сдачей готового объекта.
+                p.advantages__desc На сайте компании представлены проекты домов, разработанные нашим архитектурным бюро и коллегами из сотрудничающих с нами фирм. Применив указанные фильтры, можно выбрать проект, в максимальной степени соответствующий Вашим требованиям по площади, этажности, архитектурному стилю, материалу стен и другим параметрам. В готовые проекты коттеджей и домов можно внести изменения, при желании можно заказать у нас индивидуальное проектирование.
+                p.advantages__desc Специалисты компании окажут необходимую помощь не только в выборе проекта, но и помогут подобрать строительные материалы, сделают расчет стоимости строительства дома и подготовят спецификацию на строительные материалы, проконсультируют и помогут в оформлении разрешения на строительство.
+                p.advantages__desc При необходимости использования заемных средств помогут оформить ипотеку через нашего специалиста в банке и подберут удобную форму финансирования вашего проекта.
+            .advantages__wrapper 
+                .advantages__row
+                    .advantages__item 
+                        p.advantages__subtitle Каталог проектов
+                        .advantages__img 
+                            img(src="@img/advantages-img-1.png", alt="" draggable="false")
+                    .advantages__item 
+                        p.advantages__subtitle Строительство домов
+                        .advantages__img 
+                            img(src="@img/advantages-img-2.png", alt="" draggable="false")
+                .advantages__row
+                    .advantages__item 
+                        p.advantages__subtitle Каталог материалов
+                        .advantages__img 
+                            img(src="@img/advantages-img-3.png", alt="" draggable="false")
+                    .advantages__item 
+                        p.advantages__subtitle Ипотека на строительство
+                        .advantages__img 
+                            img(src="@img/advantages-img-4.png", alt="" draggable="false")
