--- a/src/index.pug
+++ b/src/index.pug
@@ -11,6 +11,8 @@ html(lang="en")
             include components/header 
             +header
             .main
+                include components/intro 
+                +intro
                 include components/advantages 
                 +advantages
                 include components/services 
