--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,6 +25,7 @@
     'layout/header',
     'layout/footer',
     'layout/sidebar',
+    'layout/intro',
     'layout/advantages',
     'layout/services',
     'layout/news',
