--- a/src/scss/themes/_theme.scss
+++ b/src/scss/themes/_theme.scss
@@ -48,3 +48,11 @@ ul{
         @include resa('max-width', 398px);
     }
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=number] {
+  -moz-appearance: textfield;
+}
